--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
+    "config": "^3.2.2",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "joi": "^14.3.1",
